--- a/examples/gesture_recognizer/android/app/src/main/res/values/strings.xml
+++ b/examples/gesture_recognizer/android/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="app_name">Cast Videos Sample</string>
     <string name="app_id">C0868879</string>
     <string name="action_settings">Settings</string>
+    <string name="action_gesture">Gesture</string>
     <string name="cast_app_name">GoogleCastPlayer</string>
     <string name="media_route_menu_title">Play on&#8230;</string>
     <string name="list_of_videos">Select a Video Clip</string>
